crates/http-core/tests/snapshots/handler_env_recovery_test__snapshot_spec_3_2_1_3_multiline_path.snap
---
source: crates/http-core/tests/handler_env_recovery_test.rs
expression: out
---
requests:
  - line:
      method: Get
      target:
        kind: absolute
        value:
          scheme: http
          authority: example.com
          path: /api/get
          query: ~
          fragment: ~
      http_version: ~
    headers: []
    body: ~
    response_handler: ~
    response_ref: ~
diagnostics: []
