crates/http-core/tests/snapshots/handler_env_recovery_test__snapshot_spec_3_2_3_1_multipart_example.snap
---
source: crates/http-core/tests/handler_env_recovery_test.rs
expression: out
---
requests:
  - line:
      method: Post
      target:
        kind: absolute
        value:
          scheme: http
          authority: example.com
          path: /api/upload
          query: ~
          fragment: ~
      http_version: ~
    headers:
      - name: Content-Type
        value: multipart/form-data; boundary=abcd
    body:
      kind: multipart
      boundary: abcd
      parts:
        - headers:
            - name: Content-Disposition
              value: "form-data; name=\"text\""
          body:
            kind: inline
            content: Text
        - headers:
            - name: Content-Disposition
              value: "form-data; name=\"file_to_send\"; filename=\"input.txt\""
          body:
            kind: file_ref
            path: "./input.txt"
    response_handler: ~
    response_ref: ~
diagnostics: []
